// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Header Header Complete 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="it-header-wrapper"
    >
      <div
        className="it-header-slim-wrapper"
      >
        <div
          className="container"
        >
          <div
            className="row"
          >
            <div
              className="col-12"
            >
              <div
                className="it-header-slim-wrapper-content"
              >
                <a
                  className="d-lg-block d-none navbar-brand"
                >
                  Ente appartenenza/Owner
                </a>
                <div
                  className="nav-mobile"
                >
                  <nav
                    className=""
                  >
                    <a
                      aria-label="Toggle navigation"
                      className="it-opener d-lg-none navbar-toggler"
                      href="#"
                      onClick={[Function]}
                      type=""
                    >
                      <span>
                        Ente appartenenza/Owner
                      </span>
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                        />
                      </svg>
                    </a>
                    <div
                      className="link-list-wrapper collapse"
                      style={Object {}}
                    >
                      <div
                        className="link-list-wrapper"
                      >
                        <ul
                          className="link-list"
                        >
                          <li>
                            <a
                              className="list-item"
                              href="#"
                            >
                              Link 1
                            </a>
                          </li>
                          <li>
                            <a
                              className="active list-item"
                              href="#"
                            >
                              Link 2 Active
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </nav>
                </div>
                <div
                  className="it-header-slim-right-zone header-slim-right-zone"
                >
                  <div
                    className="dropdown nav-item"
                    onKeyDown={[Function]}
                  >
                    <a
                      aria-expanded={false}
                      aria-haspopup={true}
                      className="dropdown-toggle nav-link"
                      href="#"
                      onClick={[Function]}
                    >
                      ITA
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                        />
                      </svg>
                    </a>
                    <div
                      aria-hidden={true}
                      className="dropdown-menu"
                      role="menu"
                      tabIndex="-1"
                    >
                      <div
                        className="row"
                      >
                        <div
                          className="col"
                          size="12"
                        >
                          <div
                            className="link-list-wrapper"
                          >
                            <ul
                              className="link-list"
                            >
                              <li>
                                <a
                                  className="list-item dropdown-item"
                                  href="#"
                                  onClick={[Function]}
                                  role="menuitem"
                                  tabIndex="0"
                                >
                                  <span>
                                    ITA
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  className="list-item dropdown-item"
                                  href="#"
                                  onClick={[Function]}
                                  role="menuitem"
                                  tabIndex="0"
                                >
                                  <span>
                                    ENG
                                  </span>
                                </a>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="it-access-top-wrapper"
                  >
                    <button
                      aria-label={null}
                      className="btn btn-primary btn-sm"
                      onClick={[Function]}
                    >
                      Accedi
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="it-nav-wrapper"
      >
        <div
          className="it-header-center-wrapper"
        >
          <div
            className="container"
          >
            <div
              className="row"
            >
              <div
                className="col-12"
              >
                <div
                  className="it-header-center-content-wrapper"
                >
                  <div
                    className="it-brand-wrapper"
                  >
                    <a>
                      <svg
                        className="icon"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19 12l-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8zM7.9 9.1L5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1zM22 12A10 10 0 1112 2a10 10 0 0110 10zm-1 0a9 9 0 10-9 9 9 9 0 009-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                      <div
                        className="it-brand-text"
                      >
                        <h2
                          className="no_toc"
                        >
                          Lorem Ipsum Lorem Ipsum
                        </h2>
                        <h3
                          className="no_toc d-none d-md-block"
                        >
                          Inserire qui la tag line
                        </h3>
                      </div>
                    </a>
                  </div>
                  <div
                    className="it-right-zone"
                  >
                    <div
                      className="it-socials d-none d-md-flex"
                    >
                      <span>
                        Seguici su
                      </span>
                      <ul>
                        <li>
                          <a
                            aria-label="Facebook"
                            href="#"
                            target="_blank"
                          >
                            <svg
                              className="icon"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M13.55 22v-9.11h3.07l.46-3.56h-3.53V7.05c0-1 .29-1.73 1.77-1.73h1.87V2.14A25.14 25.14 0 0014.45 2c-2.72 0-4.58 1.66-4.58 4.7v2.62H6.81v3.57h3.06V22h3.68z"
                              />
                            </svg>
                          </a>
                        </li>
                        <li>
                          <a
                            aria-label="Github"
                            href="#"
                            target="_blank"
                          >
                            <svg
                              className="icon"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M12 2a10 10 0 00-3.16 19.49c.5.09.68-.22.68-.48v-1.7C6.73 19.91 6.14 18 6.14 18A2.69 2.69 0 005 16.5c-.91-.62.07-.61.07-.61a2.13 2.13 0 011.53 1 2.14 2.14 0 002.91.83 2.16 2.16 0 01.63-1.34c-2.14-.21-4.52-1.07-4.52-4.9a3.89 3.89 0 011-2.69 3.57 3.57 0 01.1-2.64s.84-.27 2.75 1a9.63 9.63 0 015 0c1.91-1.29 2.75-1 2.75-1 .37.835.405 1.78.1 2.64a3.89 3.89 0 011 2.69c0 3.84-2.34 4.68-4.57 4.93.482.49.73 1.164.68 1.85v2.75c0 .33.18.58.69.48A10 10 0 0012 2z"
                              />
                            </svg>
                          </a>
                        </li>
                        <li>
                          <a
                            aria-label="Twitter"
                            href="#"
                            target="_blank"
                          >
                            <svg
                              className="icon"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M8.08 20a10.93 10.93 0 0011-11v-.5a8 8 0 001.92-2 7.85 7.85 0 01-2.22.61A3.89 3.89 0 0020.48 5a8 8 0 01-2.48.91 3.87 3.87 0 00-6.59 3.52 11 11 0 01-8-4 3.85 3.85 0 001.19 5.16 3.76 3.76 0 01-1.75-.48A3.87 3.87 0 006 13.91a3.73 3.73 0 01-1 .14 4.3 4.3 0 01-.73-.05 3.87 3.87 0 003.61 2.68 7.73 7.73 0 01-4.8 1.66 7 7 0 01-.92-.06A10.9 10.9 0 008.08 20"
                              />
                            </svg>
                          </a>
                        </li>
                      </ul>
                    </div>
                    <div
                      className="it-search-wrapper"
                    >
                      <span
                        className="d-none d-md-block"
                      >
                        Cerca
                      </span>
                      <a
                        aria-label="Cerca"
                        className="search-link rounded-icon"
                      >
                        <svg
                          className="icon"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
                          />
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="it-header-navbar-wrapper"
        >
          <div
            className="container"
          >
            <div
              className="row"
            >
              <div
                className="col-12"
              >
                <nav
                  className="navbar has-megamenu navbar navbar-expand-lg"
                >
                  <button
                    aria-controls="nav1"
                    aria-expanded="false"
                    aria-label="Toggle navigation"
                    className="custom-navbar-toggler navbar-toggler"
                    href="#"
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      className="icon"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M22 5v1H2V5zM2 12.5h20v-1H2zM2 19h20v-1H2z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                  </button>
                  <div
                    className="navbar-collapsable collapse navbar-collapsable"
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                  >
                    <div
                      className="overlay"
                      onClick={[Function]}
                      style={
                        Object {
                          "display": "none",
                        }
                      }
                    />
                    <div
                      className="close-div sr-only"
                    >
                      <button
                        className="btn close-menu"
                        type="button"
                      >
                        <span
                          className="it-close"
                        />
                        close
                      </button>
                    </div>
                    <div
                      className="menu-wrapper"
                    >
                      <ul
                        className="navbar-nav"
                      >
                        <li
                          className="nav-item active"
                        >
                          <a
                            className="nav-link active"
                            href="#"
                            onClick={[Function]}
                          >
                            <span>
                              link 1 active 
                            </span>
                            <span
                              className="sr-only"
                            >
                              current
                            </span>
                          </a>
                        </li>
                        <li
                          className="nav-item"
                        >
                          <a
                            className="nav-link disabled"
                            disabled={true}
                            href="#"
                            onClick={[Function]}
                          >
                            Link 2
                          </a>
                        </li>
                        <li
                          className="nav-item"
                        >
                          <a
                            className="nav-link"
                            href="#"
                            onClick={[Function]}
                          >
                            Link 3
                          </a>
                        </li>
                        <li
                          className="nav-item"
                        >
                          <a
                            className="nav-link"
                            href="#"
                            onClick={[Function]}
                          >
                            Link 4
                          </a>
                        </li>
                        <li
                          className="nav-item"
                        >
                          <a
                            className="nav-link disabled"
                            disabled={true}
                            href="#"
                            onClick={[Function]}
                          >
                            Megamenu label
                          </a>
                        </li>
                      </ul>
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Header Header center 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="it-header-center-wrapper"
    >
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="col-12"
          >
            <div
              className="it-header-center-content-wrapper"
            >
              <div
                className="it-brand-wrapper"
              >
                <a>
                  <svg
                    className="icon"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 12l-2.9 2.9-.7-.8 2.1-2.1-2.1-2.1.7-.8zM7.9 9.1L5 12l2.9 2.9.7-.8L6.5 12l2.1-2.1zM22 12A10 10 0 1112 2a10 10 0 0110 10zm-1 0a9 9 0 10-9 9 9 9 0 009-9zM9.6 16.5l1 .3 3.7-9.3-.9-.3z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                  <div
                    className="it-brand-text"
                  >
                    <h2
                      className="no_toc"
                    >
                      Lorem Ipsum Lorem Ipsum
                    </h2>
                    <h3
                      className="no_toc d-none d-md-block"
                    >
                      Inserire qui la tag line
                    </h3>
                  </div>
                </a>
              </div>
              <div
                className="it-right-zone"
              >
                <div
                  className="it-socials d-none d-md-flex"
                >
                  <span>
                    Seguici su
                  </span>
                  <ul>
                    <li>
                      <a
                        aria-label="Facebook"
                        href="#"
                        target="_blank"
                      >
                        <svg
                          className="icon"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                          <path
                            d="M13.55 22v-9.11h3.07l.46-3.56h-3.53V7.05c0-1 .29-1.73 1.77-1.73h1.87V2.14A25.14 25.14 0 0014.45 2c-2.72 0-4.58 1.66-4.58 4.7v2.62H6.81v3.57h3.06V22h3.68z"
                          />
                        </svg>
                      </a>
                    </li>
                    <li>
                      <a
                        aria-label="Github"
                        href="#"
                        target="_blank"
                      >
                        <svg
                          className="icon"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                          <path
                            d="M12 2a10 10 0 00-3.16 19.49c.5.09.68-.22.68-.48v-1.7C6.73 19.91 6.14 18 6.14 18A2.69 2.69 0 005 16.5c-.91-.62.07-.61.07-.61a2.13 2.13 0 011.53 1 2.14 2.14 0 002.91.83 2.16 2.16 0 01.63-1.34c-2.14-.21-4.52-1.07-4.52-4.9a3.89 3.89 0 011-2.69 3.57 3.57 0 01.1-2.64s.84-.27 2.75 1a9.63 9.63 0 015 0c1.91-1.29 2.75-1 2.75-1 .37.835.405 1.78.1 2.64a3.89 3.89 0 011 2.69c0 3.84-2.34 4.68-4.57 4.93.482.49.73 1.164.68 1.85v2.75c0 .33.18.58.69.48A10 10 0 0012 2z"
                          />
                        </svg>
                      </a>
                    </li>
                    <li>
                      <a
                        aria-label="Twitter"
                        href="#"
                        target="_blank"
                      >
                        <svg
                          className="icon"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                          <path
                            d="M8.08 20a10.93 10.93 0 0011-11v-.5a8 8 0 001.92-2 7.85 7.85 0 01-2.22.61A3.89 3.89 0 0020.48 5a8 8 0 01-2.48.91 3.87 3.87 0 00-6.59 3.52 11 11 0 01-8-4 3.85 3.85 0 001.19 5.16 3.76 3.76 0 01-1.75-.48A3.87 3.87 0 006 13.91a3.73 3.73 0 01-1 .14 4.3 4.3 0 01-.73-.05 3.87 3.87 0 003.61 2.68 7.73 7.73 0 01-4.8 1.66 7 7 0 01-.92-.06A10.9 10.9 0 008.08 20"
                          />
                        </svg>
                      </a>
                    </li>
                  </ul>
                </div>
                <div
                  className="it-search-wrapper"
                >
                  <span
                    className="d-none d-md-block"
                  >
                    Cerca
                  </span>
                  <a
                    aria-label="Cerca"
                    className="search-link rounded-icon"
                  >
                    <svg
                      className="icon"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Header Header nav 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="it-header-navbar-wrapper"
    >
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="col-12"
          >
            <nav
              className="navbar has-megamenu navbar navbar-expand-lg"
            >
              <button
                aria-controls="nav1"
                aria-expanded="false"
                aria-label="Toggle navigation"
                className="custom-navbar-toggler navbar-toggler"
                href="#"
                onClick={[Function]}
                type="button"
              >
                <svg
                  className="icon"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 5v1H2V5zM2 12.5h20v-1H2zM2 19h20v-1H2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </button>
              <div
                className="navbar-collapsable collapse navbar-collapsable"
                style={
                  Object {
                    "display": "none",
                  }
                }
              >
                <div
                  className="overlay"
                  onClick={[Function]}
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                />
                <div
                  className="close-div sr-only"
                >
                  <button
                    className="btn close-menu"
                    type="button"
                  >
                    <span
                      className="it-close"
                    />
                    close
                  </button>
                </div>
                <div
                  className="menu-wrapper"
                >
                  <ul
                    className="navbar-nav"
                  >
                    <li
                      className="nav-item active"
                    >
                      <a
                        className="nav-link active"
                        href="#"
                        onClick={[Function]}
                      >
                        <span>
                          link 1 active 
                        </span>
                        <span
                          className="sr-only"
                        >
                          current
                        </span>
                      </a>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <a
                        className="nav-link disabled"
                        disabled={true}
                        href="#"
                        onClick={[Function]}
                      >
                        Link 2
                      </a>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <a
                        className="nav-link"
                        href="#"
                        onClick={[Function]}
                      >
                        Link 3
                      </a>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <a
                        className="nav-link"
                        href="#"
                        onClick={[Function]}
                      >
                        Link 4
                      </a>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <div
                        className="dropdown nav-item"
                        onKeyDown={[Function]}
                      >
                        <a
                          aria-expanded={false}
                          aria-haspopup={true}
                          className="dropdown-toggle nav-link"
                          href="#"
                          onClick={[Function]}
                        >
                          Dropdown item
                          <svg
                            className="icon"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                            />
                          </svg>
                        </a>
                        <div
                          aria-hidden={true}
                          className="dropdown-menu"
                          role="menu"
                          tabIndex="-1"
                        >
                          <div
                            className="link-list-wrapper"
                          >
                            <ul
                              className="link-list"
                            >
                              <li>
                                <h3
                                  className="no_toc header list-item"
                                  id="heading-es-1"
                                >
                                  Heading
                                </h3>
                              </li>
                              <li>
                                <a
                                  className="list-item dropdown-item"
                                  href="#"
                                  onClick={[Function]}
                                  role="menuitem"
                                  tabIndex="0"
                                >
                                  <span>
                                    Link list 1
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  className="list-item dropdown-item"
                                  href="#"
                                  onClick={[Function]}
                                  role="menuitem"
                                  tabIndex="0"
                                >
                                  <span>
                                    Link list 2
                                  </span>
                                </a>
                              </li>
                              <li>
                                <a
                                  className="list-item dropdown-item"
                                  href="#"
                                  onClick={[Function]}
                                  role="menuitem"
                                  tabIndex="0"
                                >
                                  <span>
                                    Link list 3
                                  </span>
                                </a>
                              </li>
                              <li>
                                <span
                                  className="divider list-item"
                                />
                              </li>
                              <li>
                                <a
                                  className="list-item dropdown-item"
                                  href="#"
                                  onClick={[Function]}
                                  role="menuitem"
                                  tabIndex="0"
                                >
                                  <span>
                                    Link list 4
                                  </span>
                                </a>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </li>
                    <li
                      className="nav-item"
                    >
                      <a
                        className="nav-link disabled"
                        disabled={true}
                        href="#"
                        onClick={[Function]}
                      >
                        Megamenu label
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Header Header slim 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="it-header-slim-wrapper"
    >
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="col-12"
          >
            <div
              className="it-header-slim-wrapper-content"
            >
              <a
                className="d-lg-block d-none navbar-brand"
              >
                Ente appartenenza/Owner
              </a>
              <div
                className="nav-mobile"
              >
                <nav
                  className=""
                >
                  <a
                    aria-label="Toggle navigation"
                    className="it-opener d-lg-none navbar-toggler"
                    href="#"
                    onClick={[Function]}
                    type=""
                  >
                    <span>
                      Ente appartenenza/Owner
                    </span>
                    <svg
                      className="icon"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                      />
                    </svg>
                  </a>
                  <div
                    className="link-list-wrapper collapse"
                    style={Object {}}
                  >
                    <div
                      className="link-list-wrapper"
                    >
                      <ul
                        className="link-list"
                      >
                        <li>
                          <a
                            className="list-item"
                            href="#"
                          >
                            Link 1
                          </a>
                        </li>
                        <li>
                          <a
                            className="active list-item"
                            href="#"
                          >
                            Link 2 Active
                          </a>
                        </li>
                      </ul>
                    </div>
                  </div>
                </nav>
              </div>
              <div
                className="it-header-slim-right-zone header-slim-right-zone"
              >
                <div
                  className="dropdown nav-item"
                  onKeyDown={[Function]}
                >
                  <a
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="dropdown-toggle nav-link"
                    href="#"
                    onClick={[Function]}
                  >
                    ITA
                    <svg
                      className="icon d-none d-lg-block icon-icon-white"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                      />
                    </svg>
                  </a>
                  <div
                    aria-hidden={true}
                    className="dropdown-menu"
                    role="menu"
                    tabIndex="-1"
                  >
                    <div
                      className="row"
                    >
                      <div
                        className="col"
                        size="12"
                      >
                        <div
                          className="link-list-wrapper"
                        >
                          <ul
                            className="link-list"
                          >
                            <li>
                              <a
                                className="list-item dropdown-item"
                                href="#"
                                onClick={[Function]}
                                role="menuitem"
                                tabIndex="0"
                              >
                                <span>
                                  ITA
                                </span>
                              </a>
                            </li>
                            <li>
                              <a
                                className="list-item dropdown-item"
                                href="#"
                                onClick={[Function]}
                                role="menuitem"
                                tabIndex="0"
                              >
                                <span>
                                  ENG
                                </span>
                              </a>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="it-access-top-wrapper"
                >
                  <button
                    aria-label={null}
                    className="btn btn-primary btn-sm"
                    onClick={[Function]}
                  >
                    Accedi
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Header Header slim with full button 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="it-header-slim-wrapper"
    >
      <div
        className="container"
      >
        <div
          className="row"
        >
          <div
            className="col-12"
          >
            <div
              className="it-header-slim-wrapper-content"
            >
              <a
                className="d-lg-block navbar-brand"
              >
                Ente appartenenza/Owner
              </a>
              <div
                className="it-header-slim-right-zone header-slim-right-zone"
              >
                <div
                  className="dropdown nav-item"
                  onKeyDown={[Function]}
                >
                  <a
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="dropdown-toggle nav-link"
                    href="#"
                    onClick={[Function]}
                  >
                    ITA
                    <svg
                      className="icon"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                      />
                    </svg>
                  </a>
                  <div
                    aria-hidden={true}
                    className="dropdown-menu"
                    role="menu"
                    tabIndex="-1"
                  >
                    <div
                      className="row"
                    >
                      <div
                        className="col"
                        size="12"
                      >
                        <div
                          className="link-list-wrapper"
                        >
                          <ul
                            className="link-list"
                          >
                            <li>
                              <a
                                className="list-item dropdown-item"
                                href="#"
                                onClick={[Function]}
                                role="menuitem"
                                tabIndex="0"
                              >
                                <span>
                                  ITA
                                </span>
                              </a>
                            </li>
                            <li>
                              <a
                                className="list-item dropdown-item"
                                href="#"
                                onClick={[Function]}
                                role="menuitem"
                                tabIndex="0"
                              >
                                <span>
                                  ENG
                                </span>
                              </a>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <a
                  aria-label={null}
                  className="btn-icon btn btn-primary btn-full"
                  href="#"
                  onClick={[Function]}
                >
                  <span
                    className="rounded-icon"
                  >
                    <svg
                      className="icon icon-primary"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 13a4 4 0 004-4V6a4 4 0 00-8 0v3a4 4 0 004 4zM9 6a3 3 0 016 0v3a3 3 0 01-6 0zm11 16h-1a7 7 0 00-14 0H4a8 8 0 0116 0z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                  </span>
                  <span
                    className="d-none d-lg-block"
                  >
                    Accedi all'area personale
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Header Introduzione 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div>
    <h1>
      Header
    </h1>
    <h3>
      Documentazione ed esempi per la creazione di una testata di navigazione.
    </h3>
    <p>
      L’header di un sito della Pubblica Amministrazione è solitamente composto di 3 elementi principali:
    </p>
    <ul>
      <li>
        Un cosiddetto “slim header”, una sottile fascia dello stesso colore o, preferibilmente, di colore lievemente più scuro rispetto al tema principale del sito, che mostra alcuni link funzionali con impatto globale o esterno al sito stesso.
      </li>
      <li>
        Una parte centrale “center header“ che identifica in modo chiaro il sito attraverso logo, testo e social, e può contenere un link per effettuare ricerche sul sito.
      </li>
      <li>
        Una parte dedicata alla navigazione “nav header“, visibile su schermi di grandi dimensioni ed accessibile attraverso il classico bottone di tipo “burger menu” per dispositivi mobili.
      </li>
    </ul>
  </div>
</div>
`;
